# ocr

./: .env.example  .example.env  .gitignore  Dockerfile  Makefile  README.md  event.json  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  run.sh  serverless.yml
.github/workflows/: deploy.yml  python-application.yml
app/: consts.py  dependencies.py  main.py
app/routers/: image.py
app/utils/: __init__.py  converters.py  ocr.py
routers/: index.go  ocr.go
src/: main.py
src/app/: app.py
src/app/helper/: _const.py  image.py
src/app/routes/: _image.py  _wallet.py
src/models/: __init__.py  models.py  user.py
src/server/: __init__.py
src/server/app/: __init__.py  app.py
src/server/app/helper/: image.py
src/server/app/routes/: _bot.py  _image.py
src/utils/: __init__.py  _ocr.py  converters.py  img.py
tools/: image.go  text.go
